@@ -1,8 +1,7 @@
 	.file	"getcallerpc-MacOSX-386.s"
-
     .text
-    
 .globl _getcallerpc
 _getcallerpc:
-	movl	4(%ebp), %eax
+	movl	4(%esp), %eax
+	movl	-4(%eax), %eax
 	ret
